--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 title: Exocore
 description: A navigable, organised hypertext personal knowledge base
-url: https://exocore.netlify.app
-repository: remiliacorp/exocore
+url: https://0xdraino.netlify.app
+repository: 0xdraino/exocore
 
 ##############################################
 # --- ANALYTICS CONFIGURATION (OPTIONAL) --- #
