--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # --- USER CONFIGURATION --- #
 ##############################
 
-title: Exocore
+title: Drainco INC.
 description: A navigable, organised hypertext personal knowledge base
 url: https://0xdraino.netlify.app
 repository: 0xdraino/exocore
